abiword (2.9.2-4) unstable; urgency=low

  * FTBFS4Hurd.patch is updated.
  * force build-time regeneration of binary file shipped with sources
    + 'bison' added to Build-Depends
  * patch to prevent abiword from breaking its own source tree
    (prevent failure on second build)

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Sat, 21 Jan 2012 12:20:09 +1100

abiword (2.9.2-3) unstable; urgency=low

  * debian/abiword.mime: added missing end-of-line
    (Closes: #623136) Thanks to Kalle Olavi Niemitalo <kon@iki.fi>
  * VCS links updated to point to collab-maint
  * Build options updated:
    + new plugin: epub
    + new backend: telepathy (Closes: #656335) Thanks to Svante Signell
      (implemented with patch to add missing upstream file from trunk)
    + --with-libtidy to clean up HTML before importing (MHT plugin)
    - removed --enable-static (no longer build static libraries)
    - removed --enable-shave (use --enable-silent-rules instead)
    + added --enable-silent-rules
    + added --enable-dependency-tracking (speed up build)
  * new abiword-dbg package (Closes: #562733)

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 19 Jan 2012 19:31:11 +1100

abiword (2.9.2-2) unstable; urgency=low

  * libabiword-2.9-dev Depends (Closes: #656252)
  * fixed debian/patches/series
  * fixed arch-dependent patching (Closes: #648153)
  * safer parallel build

 -- Dmitry Smirnov <onlyjob@member.fsf.org>  Thu, 19 Jan 2012 03:13:36 +1100

abiword (2.9.2-1) unstable; urgency=low

  * New Upstream Release (2011-11-14)
  * New maintainer (Closes: #648341)
  * Packaging update
    + standards to recent versions
    - completely dropped CDBS, in favour of debhelper
    + parallel build
    + --as-needed to minimize needless linking
    + dh-autoreconf replaced old patches for make files
    + use dpkg-provided build flags + hardening
    + build-depends update (Closes: #655308)
      - dropped libgoffice dependency (to package latest abiword 2.9.2)