@@ -35,14 +35,13 @@ plugins := aiksaurus applix babelfish bmp clarisworks collab command docbook \
 override_dh_autoreconf:
 	dh_autoreconf -v --as-needed
 
-override_dh_auto_clean:
-	dh_auto_clean
-	cat debian/patches/series.$(DEB_HOST_ARCH_OS) >> debian/patches/series || return 0
-	dh_quilt_patch
-
 #: Build instructions http://www.abisource.com/~fjf/BUILD.phtml
 #: configure options reference: http://www.abisource.com/wiki/Compiling_AbiWord
 override_dh_auto_configure:
+	# arch-specific patching
+	cat debian/patches/series.$(DEB_HOST_ARCH_OS) >> debian/patches/series \
+	&& $(RM) debian/patches/series.$(DEB_HOST_ARCH_OS) \
+	&& dh_quilt_patch || return 0
 	dh_auto_configure -- \
 		--without-gnomevfs \
 		--with-gio \
