@@ -5,6 +5,7 @@ abiword (2.9.2-4) unstable; urgency=low
     + 'bison' added to Build-Depends
   * patch to prevent abiword from breaking its own source tree
     (prevent failure on second build)
+  * arch-specific patch no longer break second build
 
  -- Dmitry Smirnov <onlyjob@member.fsf.org>  Sat, 21 Jan 2012 12:20:09 +1100
 
